amf-cli/shared/src/test/resources/graphql-federation/tck/apis/invalid/key-input-type.report
ModelId: file://amf-cli/shared/src/test/resources/graphql-federation/tck/apis//invalid/key-input-type.graphql
Profile: GraphQL
Conforms: false
Number of results: 3

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#empty-definition
  Message: Input Type definitions must have at least one field
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql-federation/tck/apis/invalid/key-input-type.graphql#/declares/shape/Person
  Property: http://www.w3.org/ns/shacl#property
  Range: [(1,0)-(1,12)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#antlr-error
  Message: Syntax error in the following text: '@key'
  Severity: Violation
  Target: 
  Property: 
  Range: [(1,13)-(1,17)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#antlr-error
  Message: Syntax error in the following text: '@external'
  Severity: Violation
  Target: 
  Property: 
  Range: [(3,17)-(3,26)]
  Location: 
